bk_ida/gccida/c0/handle_avail_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:3938:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = ( rtx)insn_computes_expr[2]; 
           ^~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:3974:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx)insna[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:3976:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
to = ( rtx)expr_set[1]; 
           ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:3995:21: error: use of undeclared identifier 'machine_mode'
to = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)expr_set->fld[0].rtwint)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:3995:36: error: expected expression
to = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)expr_set->fld[0].rtwint)); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/gcse.c:4010:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx)insna[2]; 
            ^~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/handle_avail_expr/src/obj/gcse.o] Error 1
